--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "junking",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "description": "node实现命令行工具",
-  "main": "index.js",
+  "main": "src/index.ts",
   "bin": {
-    "junking": "./index.js"
+    "junking": "src/index.ts"
   },
-  "scripts": {},
+  "scripts": {
+    "build": "webpack",
+    "test-cli": "node dist/cli.js -h",
+    "tsc": "tsc -w"
+  },
   "author": "Junking",
   "license": "MIT",
   "dependencies": {
@@ -17,5 +21,18 @@
     "cli",
     "命令行工具",
     "重置npm源"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.25.0",
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/node": "^20.14.12",
+    "@types/yargs": "^17.0.32",
+    "babel-loader": "^9.1.3",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
+  }
 }
