--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "junking",
-  "version": "1.3.7",
+  "version": "1.3.10",
   "description": "node实现命令行工具",
   "main": "src/index.ts",
   "bin": {
-    "junking": "src/index.ts"
+    "junking": "dist/cli.js"
   },
+  "files": [
+    "dist",
+    "README.MD"
+  ],
   "scripts": {
     "build": "webpack",
     "test-cli": "node dist/cli.js -h",
+    "test-cli-fb": "node dist/cli.js fb",
     "tsc": "tsc -w"
   },
   "author": "Junking",
@@ -29,6 +34,7 @@
     "@types/node": "^20.14.12",
     "@types/yargs": "^17.0.32",
     "babel-loader": "^9.1.3",
+    "banner-webpack-plugin": "^0.2.3",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
